%% Máquina de Estados: Nó (Node)
%% Referência: docs/blueprint/09-state_models.md

stateDiagram-v2
    direction TB

    [*] --> online : Registro + teste de conectividade OK

    online : Heartbeats regulares
    online : Recebe e serve chunks
    online : Reporta capacidade

    suspect : Heartbeat ausente >30min
    suspect : Pode ser instabilidade temporária
    suspect : Alerta warning gerado

    lost : Heartbeat ausente >1h
    lost : Alerta critical gerado
    lost : Auto-healing disparado

    draining : Chunks sendo migrados
    draining : Não recebe novos chunks
    draining : Admin iniciou desconexão

    online --> suspect : Heartbeat ausente >30min (Scheduler)
    suspect --> lost : Heartbeat ausente >1h (Scheduler)
    suspect --> online : Heartbeat recebido
    lost --> online : Heartbeat recebido (reconexão)
    online --> draining : Admin inicia drain
    draining --> [*] : Drain completo → nó removido

    note right of online
        Nó saudável e operacional.
        Heartbeat a cada 1 minuto.
    end note

    note right of lost
        Auto-healing re-replica todos
        os chunks deste nó em até 1h.
    end note

    note left of draining
        Irreversível. Todos os chunks
        migrados antes da remoção.
    end note
